tests/ui/spirv-attr/bad-infer-storage-class.stderr
error: unknown argument to spirv attribute
 --> $DIR/bad-infer-storage-class.rs:9:13
  |
9 |     #[spirv(uniform_constant)] warning: &Image!(2D, type=f32),
  |             ^^^^^^^^^^^^^^^^

error: aborting due to previous error

